--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -1,3 +1,5 @@
+<%- include('../partials/header') %>
+
 <div class="auth-wrapper">
   <form method="POST" cation="/auth/login">
     <div class="text-center">
@@ -32,3 +34,5 @@
     </div>
   </form>
 </div>
+
+<%- include('../partials/footer') %>
