--- a/src/views/auth/signup.ejs
+++ b/src/views/auth/signup.ejs
@@ -1,3 +1,5 @@
+<%- include('../partials/header') %>
+
 <div class="auth-wrapper">
   <form method="POST" action="/auth/signup">
     <div class="text-center">
@@ -39,3 +41,5 @@
     </div>
   </form>
 </div>
+
+<%- include('../partials/footer') %>
