--- a/src/views/posts/index.ejs
+++ b/src/views/posts/index.ejs
@@ -1,5 +1,7 @@
 <%- include('../partials/header') %>
 <div class="container">
-  <h1>post page</h1>
+  <div style="max-width: 600px; margin: 1rem auto">
+    <%- include('../partials/create-post') %>
+  </div>
 </div>
-<%- include('../partials/footer') %>
+<%- include('../partials/post-modal') %> <%- include('../partials/footer') %>
