--- a/src/views/posts/index.ejs
+++ b/src/views/posts/index.ejs
@@ -3,5 +3,12 @@
   <div style="max-width: 600px; margin: 1rem auto">
     <%- include('../partials/create-post') %>
   </div>
+  <% posts.forEach((post) ) => { %> <% if
+  (post.author.id.equals(currentUser.id)) || currentUser.friends.find(friend =>
+  friend === post.author.id.toString()) { %>
+  <div style="max-width: 600px; margin: 1rem auto">
+    <%- include('../partials/post-item') %>
+  </div>
+  <% } %> <% } %>
 </div>
 <%- include('../partials/post-modal') %> <%- include('../partials/footer') %>
